chore(perf): close out hof-glue-jit / vectorize-loop / direct-style-eval (re-measured)
Gave the three perennially-deferred perf items permanent, data-backed verdicts
(re-measured on current main) so they stop being re-investigated every few days:

- hof-glue-jit-compile -> DEFERRED to the dual-bank LExpr VM roadmap.
  typeclassFoldMacro 1.142 ms/op vs typeclassFold 0.005 ms/op; loop+combine
  already native+JIT'd (foldLeftReusing), only lever left is whole-fn JIT of
  combineAll (needs SscVm List-iter opcodes + foldLeft recognizer + using/given
  JIT support) -- gated on the LExpr VM, not a bounded slice.
- vectorize-pure-loop -> WONTFIX until a motivating workload. incubator.vector
  unreferenced; pureCallSum* bypass the loop via Gauss (walkLinearPoly) so SIMD
  helps 0%; no non-polynomial hot loop to justify the incubator dependency.
- direct-style-eval -> WONTFIX (data-disproven). Computation.Pure built at 1261
  sites; alloc ~16% Pure / ~66% dispatch (untouched by the migration) -> sub-15%
  for a 1200-site high-risk change.

No code change -- close-outs with fresh numbers; micro-perf is at its floor.